--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: bash
+language: bash node_js
 dist: trusty
 sudo: required
 
@@ -12,6 +12,10 @@ addons:
     - libstdc++6:i386
     - git
     - jq
+
+cache:
+  directories:
+    - "markdown-table-cli"
 
 script:
   - bash ./steamcmd_appid.sh
