--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ addons:
     - libstdc++6:i386
     - git
     - jq
+    - libevent-dev
+    - libncurses-dev
 env:
   global:
   - RETRY_TIMEOUT_SECONDS=15
