--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_script:
 - export PATH=$HOME/tmux/bin:$PATH
 - cd ..
 - tmux -V
-- rm -r tmux
+- rm -rf tmux
 - wget https://ftp.pcre.org/pub/pcre/pcre2-10.32.zip
 - unzip pcre2-10.32.zip
 - cd pcre2-10.32
@@ -40,7 +40,7 @@ before_script:
 - cd ..
 - pcre2grep -V
 - rm pcre2-10.32.zip
-- rm -r pcre2-10.32
+- rm -rf pcre2-10.32
 script:
   - bash ./steamcmd_appid.sh
 
