--- a/steamcmd_appid_anon_servers.json
+++ b/steamcmd_appid_anon_servers.json
@@ -2459,7 +2459,7 @@
   {
     "appid": 834910,
     "name": "ATLAS",
-    "subscription": "prerelease",
+    "subscription": "released",
     "linux": false,
     "windows": true
   },
